<resources>
    <string name="app_name">Parcialcaro</string>


        <string name="str_login_username">Nombre de usuario</string>
        <string name="str_login_password">Contraseña</string>
        <string name="str_login_btn_in">Ingresar</string>
        <string name="str_label_question">¿No tienes cuenta?,</string>
        <string name="str_label_link_createaccount">crea una aqui.</string>
        <string name="str_ca_email">Correo electronico</string>
        <string name="str_ca_name">Nombre</string>
        <string name="str_ca_user">Usuario</string>
        <string name="str_ca_pass">Contraseña</string>
        <string name="str_ca_confpass">Confirmar contraseña</string>
        <string name="str_btn_createaccount">Registrarse</string>
        <string name="str_title_toolbar">Crear Cuenta</string>


    <string name="contacto1">Nombre contacto 1</string>
    <string name="contacto2">Nombre contacto 2</string>
    <string name="contacto3">Nombre contacto 3</string>
    <string name="contacto4">Nombre contacto 4</string>
    <string name="contacto5">Nombre contacto 5</string>
    <string name="contacto6">Nombre contacto 6</string>
    <string name="contacto7">Nombre contacto 7</string>
    <string name="contacto6">Nombre contacto 6</string>

</resources>
