<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent1"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/contacto1"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto1"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>



        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto2"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                />





        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question1"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto3"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question2"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto4"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question3"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto5"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question4"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto6"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question5"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto7"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/id_tv_question6"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto8"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>







        </LinearLayout>


    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
